# immich-distribution

./: .gitignore  CORE24.md  ISSUE-BODY.md  LICENSE  Makefile  README.md  SYNC.md  VERSION  auto-bump.sh  dependency.py  update.sh  version-update.sh
docs/: Makefile  README.md  immich-dist-snap.drawio  mkdocs.yml  pyproject.toml  snapstore_metrics.py  snapstore_metrics.sh  snapstore_versions.py  snapstore_versions.sh
docs/docs/: about.md  index.md  install.md
docs/docs/assets/: channel-flow.drawio  immich-dist-snap.drawio
docs/docs/configuration/: backup-restore.md  change-media-location.md  cli-administration.md  cli.md  haproxy.md  https.md  index.md  metrics.md  nodejs.md  notifications.md  postgres.md  security.md  storage.md  sync.md
docs/docs/css/: extra.css
docs/docs/install/: upgrade-from-old-releases.md
docs/docs/news/: .authors.yml  index.md
docs/site/: LICENSE  README.md  config.toml
docs/site/content/: _index.md  about.md
parts/sync/: Makefile  README.md  pyproject.toml
tests/: Makefile  README.md  conftest.py  diff-upstream-changes.sh  docker-compose.restore-test.yml  external-test-files.list  inspect-ci-build.sh  movie.py  pyproject.toml  requirements.txt  run.sh  test-in-container.sh  test_admin_api_key.py  test_assets_exif.py  test_assets_ocr.py  test_assets_people.py  test_assets_uploads.py  test_backup.sh  test_certificate.py  test_cli.sh  test_docker_restore.py  test_fresh_install_web.py  test_haproxy.py  test_haproxy.sh  test_metrics.py  test_metrics.sh  test_migration_restore.py  test_populated_web.py  test_prep.py  test_smoke.py  test_snap_backup_restore.py  test_sync.sh  test_upgrade_blocking.sh  test_vectorchord.sh  test_vectorchord_pre_upgrade.sh  test_vips_version.py  test_vips_version.sh  tests_assets.py  tests_prep.py  tests_selenium.py  (+4 more)
tests/assets/: ai-apple.tiff
tests/helpers/: __init__.py  assets.py  command.py  immich.py  metrics.py  snap.py  wait.py  web.py
(+195 files in other folders)
