[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Stefan Berggren <nsg@nsg.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.6.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
